--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-/* 
--Tu ngoai vao trong
--Tu tren xuong duoi
-1, vi tri
-2, kich thuoc (width,height)
-3, mau sac
-4, kieu dang ( kieu chu, hinh tron, hinh vuong */
-
 /* reset css */
 *{
     padding: 0;
@@ -19,7 +11,7 @@ html{
     scroll-behavior: smooth; /* thuoc tinh  cuộn trang */
 }
 .clear{
-    clear: both;  /* Để giải quyết vấn đề của float */
+    clear: both;
 }
 .text-while{
     color: #fff !important ;
@@ -56,12 +48,15 @@ html{
 .mt-16{
     margin-top: 16px;
 }
-
+/*
+.main{
+    overflow: hidden;
+}
+*/
 /* Begin css header */
 .header{
 height: 46.5px;
 background-color: #000;
-/* Lam cho header dung yen */
 position: fixed;
 top: 0;
 left: 0;
@@ -75,14 +70,12 @@ z-index: 1;
 .navbar li{
     display: inline-block;
     position: relative;
-    top: 100%;
-    left: 0;
 }
 
 .navbar > li > a{
     color: #fff; 
 }
-
+ 
 .navbar .subnav li{
     width: 100%;
     display: block;
@@ -99,8 +92,6 @@ z-index: 1;
 .navbar li:hover {
     background-color: #ccc;
 }
-/* Khi hover vào li thì con của li sẽ được hover "a" */
-
 .navbar .subnav {
     min-width: 160px;
     display: none; 
@@ -122,17 +113,16 @@ z-index: 1;
     color: #fff;
     font-size: 20px;
     line-height: 46.5px;
-    padding: 0 21px;     /*  padding tren duoi= 0, trai phai =21px*/
+    padding: 0 21px;    
 
 }
 .header .search-btn{
     float: right;
-    cursor: pointer;    /* Cursor : Tahy doi con tro chuot, pointer : hinh ban tay */
+    cursor: pointer;  
 }
 .header .search-btn:hover{
     background-color: #f44336;
 }
-/* Nguyên tắc : cais gì mà ấn vào được nó sẽ có hình bàn tay  */
 /* css slider */
 
 .slider{
@@ -161,7 +151,10 @@ z-index: 1;
 }
 /*  css content */
 .content-section{
+    padding-left: 16px;
+    padding-right: 16px;
     width: 800px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 64px 0 112px;
@@ -290,7 +283,7 @@ z-index: 1;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.3);
     display: none;    /* can su dung js de an ,hien */
-    align-items: center;
+    align-items: center; 
     justify-content: center;
 }
 .modal-container{
@@ -425,4 +418,3 @@ z-index: 1;
     color: rgba(0, 0, 0, 0.4);
 
 }
-/* responsive */
